--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css" />
+	<!--[if IE 7]><link rel="stylesheet" href="css/fontello-ie7.css"><![endif]-->
 
 	<!-- Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
