--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,79 @@
 /* ==========================================================================
 
+   Icon font
+
+   ========================================================================== */
+@font-face {
+  font-family: 'fontello';
+  src: url('../fonts/fontello/fontello.eot?24158237');
+  src: url('../fonts/fontello/fontello.eot?24158237#iefix') format('embedded-opentype'),
+       url('../fonts/fontello/fontello.woff?24158237') format('woff'),
+       url('../fonts/fontello/fontello.ttf?24158237') format('truetype'),
+       url('../fonts/fontello/fontello.svg?24158237#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?24158237#fontello') format('svg');
+  }
+}
+*/
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+     
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+i.icon {
+	margin: 0;
+}
+ 
+.icon-star:before { content: '\e800'; } /* '' */
+.icon-star-empty:before { content: '\e801'; } /* '' */
+
+.star-rating {
+	font-size: .8333em;
+	margin: .9em 0;
+	line-height: 1;
+}
+
+.star-rating i {
+	margin-right: -.3em;
+}
+
+/* ==========================================================================
+
    Basic page setup
 
    ========================================================================== */
